--- a/json-editor/node.html
+++ b/json-editor/node.html
@@ -1,4 +1,4 @@
-<div property-type="{{ type }}" property-depth="{{ depth }}">
+<div json-property="true">
 	<span style="padding:7px;" class="label label-info property-key">{{ key }}</span>
-	<div class="property-childs"  style="margin-left:15px;"></div>
+	<div style="margin-left:15px;" class="property-childs" ></div>
 </div>
